# ota_server

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-install.sh
.github/workflows/: prerelease.yml  push_branch.yml  release.yml
src/: lambda_function.py
tests/: __init__.py  test_deleteme.py
