[tool.poetry]
name = "template"
version = "0.1.0"
description = "A template poetry project"
authors = ["Tony Holroyd <testingtony12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
flake8 = "^7.0.0"
pre-commit = "^4.1.0"
ruff = "^0.9.6"

[tool.pytest.ini_options]
addopts = "--doctest-modules"

[tool.poetry.scripts]
my_package_cli = 'my_package.console:run'

[tool.ruff]
line-length = 120
indent-width = 4
fix = true

[tool.ruff.lint]
extend-select = ["E501", "B", "D", "SIM", "PTH", "I", "F", "E", "C90", "N", "UP", "A", "DTZ", "Q"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
